add logo, clean up gulpfile

--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -13,9 +13,8 @@
   color: $white;
   font-weight: 700;
 
-  ion-icon {
-    font-size: 3em;
-    margin-right: 10px;
+  img {
+    width: 50px;
   }
 }
 
