--- a/src/styles/components/_jca-nav-card.scss
+++ b/src/styles/components/_jca-nav-card.scss
@@ -10,7 +10,7 @@
   margin: 0;
 
   &__item {
-    border-top: 1px solid #f5f5f5;
+    // border-top: 1px solid #f5f5f5;
     font-weight: 700;
     color:  $black;
     display: flex;
@@ -32,9 +32,10 @@
   &__item-link {
     color: $black;
     padding: 20px;
+    padding-left: 0;
     display: block;
     flex: 1;
-    border-left: 1px solid #f5f5f5;
+    // border-left: 1px solid #f5f5f5;
 
     &:hover {
       color:  $black!important;
@@ -53,13 +54,13 @@
     }
 
     &--active > &-link {
-      border-left: 1px solid darken( $black, 5%);
+      // border-left: 1px solid darken( $black, 5%);
     }
   }
 }
 
 .jca-nav-card__item:hover {
-  border-top: 1px solid #f5f5f5;
+  // border-top: 1px solid #f5f5f5;
   color:  $black;
   display: flex;
   text-transform: uppercase;
