--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -14,6 +14,7 @@
 @import './components/jca-page-header';
 @import './components/jca-card-group';
 @import './components/jca-card';
+@import './components/jca-card-tags';
 
 body * {
   font-family: $base_font;
