--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -34,3 +34,11 @@
   grid-area: "Sidebar";
   padding: 20px;
 }
+
+.jca-loader {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
