--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,7 +1,9 @@
 // VENDOR
 @import '../../node_modules/normalize.css/normalize.css';
 @import '../../node_modules/bootstrap/dist/css/bootstrap.min.css';
+@import '../../node_modules/animate.css/animate.min.css';
 @import './vendor/bootstrap-theme.css';
+@import './vendor/dropdown.min.css';
 
 // BASE
 @import './base/fonts.css';
