--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -1,28 +1,95 @@
 .jca-layout {
   display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 80px 1fr;   
+}
+
+.jca-topbar {
+  display: flex;
+  width: 100%;
+  background-color:  $white;
+  box-shadow: 0 0 35px 0 rgba(154, 161, 171, 0.15);
+  padding: 0 50px;
+  height: 80px;
+}
+
+.jca-main {
+  display: grid;
   grid-template-columns: 250px 1fr;
-  grid-template-rows: 60px 1fr;
+  grid-template-rows: 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px; 
 }
 
 .jca-logo {
-  grid-area: "Logo";
   display: flex;
   align-items: center;
-  justify-content: center;
-  background-color:  $black;
-  color: $white;
+  justify-content: flex-start;
+  color: $black;
   font-weight: 700;
+  width: 200px;
+  max-width: 250px;
 
   img {
     width: 50px;
   }
 }
 
-.jca-topbar__menu {
-  grid-area: "Top menu";
+.jca-topbar__nav {
   display: flex;
   align-items: center;
-  background-color: $black;
+  flex: 1;
+  justify-content: flex-end;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  color: $black;
+}
+
+.jca-topbar__nav-item {
+  height: 100%;
+
+  .dropdown-menu {
+    padding: 0;
+    margin: 0;
+    box-shadow: 0 0 35px 0 rgba(154, 161, 171, 0.15);
+    border: none;
+    margin-top: 10px;
+  }
+
+  .dropdown-item {
+    padding: 0;
+    font-size: 0.9em;
+    padding: 15px 8px;
+    text-align: center;
+  }
+
+  &:hover {
+    color: #0074E4;
+
+    a {
+      color: #0074E4;
+    }
+  }
+}
+
+.jca-topbar__nav-content {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 20px;
+  // width: 100%;
+
+  a {
+    text-decoration: none;
+    color: $black;
+  }
+}
+
+.jca-topbar__nav-icon {
+  font-size: 1.7em;
+  margin-right: 10px;
 }
 
 .jca-content {
@@ -41,4 +108,5 @@
   height: 100vh;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
