--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,6 +17,7 @@
 @import './components/jca-card-group';
 @import './components/jca-card';
 @import './components/jca-card-tags';
+@import './components/jca-card-pricing';
 
 body * {
   font-family: $base_font;
