--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -5,3 +5,8 @@ $grey:              #F8F9FA;
 
 $base_font_size:      14px;
 $base_font:           'Montserrat', sans-serif;
+
+$default_padding:     30px;
+$light_padding:       20px;
+$heavy_padding:       40px;
+$default_radius:      4px;
