--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -18,6 +18,7 @@
 @import './components/jca-card';
 @import './components/jca-card-tags';
 @import './components/jca-card-pricing';
+@import './components/jca-card-feed';
 
 body * {
   font-family: $base_font;
