--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -22,7 +22,8 @@
   grid-template-columns: 250px 1fr;
   grid-template-rows: 1fr;
   grid-column-gap: 0px;
-  grid-row-gap: 0px; 
+  grid-row-gap: 0px;
+  margin-top: 40px;
 }
 
 .jca-logo {
