--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -10,3 +10,6 @@ $default_padding:     30px;
 $light_padding:       20px;
 $heavy_padding:       40px;
 $default_radius:      4px;
+// $default_shadow:      0 0 35px 0 rgba(154, 161, 171, 0.15);
+$default_shadow:      0 19px 38px rgba(0,0,0,0.10), 0 15px 12px rgba(0,0,0,0.04);
+$default_border:      1px solid $grey;
