--- a/src/styles/components/_jca-card.scss
+++ b/src/styles/components/_jca-card.scss
@@ -2,7 +2,7 @@
   border-radius: $default_radius;
   background: $white;
   overflow: hidden;
-  box-shadow: 0 0 35px 0 rgba(154, 161, 171, 0.15);
+  box-shadow: $default_shadow;
 
   &__header {
     height: 60px;
