--- a/src/styles/components/_jca-card-pricing.scss
+++ b/src/styles/components/_jca-card-pricing.scss
@@ -1,8 +1,8 @@
 .jca-card-pricing {
-  border-radius: 4px;
+  border-radius: $default_radius;
   background: $white;
   overflow: hidden;
-  box-shadow: 0 0 35px 0 rgba(154, 161, 171, 0.15);
+  box-shadow: $default_shadow;
 
   &--featured {
     box-shadow: 0 0 65px 0 rgba(154, 161, 171, 0.15);
@@ -13,13 +13,12 @@
     height: 100px;
     display: flex;
     align-items: center;
-    padding: 30px;
+    padding: $default_padding;
     flex-direction: column;
     justify-content: center;
-    // border-bottom: 1px solid darken($white, 5%);
 
     &-main {
-      font-weight: 800;
+      font-weight: 700;
       text-transform: uppercase;
       font-size: 1.3em;
     }
@@ -32,9 +31,8 @@
   &__price {
     text-align: center;
     display: flex;
-    padding: 20px 40px;
-    // background: darken($white, 3%);
-    color: #0061BE;
+    padding:  $default_padding;
+    background: $grey;
     flex-direction: column;
 
     &-meta {
@@ -49,7 +47,7 @@
 
     &-value {
       font-size: 3em;
-      font-weight: 800;
+      font-weight: 700;
       flex: 1;
       display: flex;
       align-items: center;
@@ -74,7 +72,7 @@
   }
 
   &__features {
-    padding: 20px 40px;
+    padding: $default_padding;
 
     ul {
       margin: 0;
@@ -97,19 +95,40 @@
   &__footer {
     padding: 30px 40px;
     text-align: center;
-    // background: darken($white, 2%);
-
 
     .btn {
-      
       border-radius: 100px;
       font-weight: 700;
       padding: 10px 40px;
-      // border-top-left-radius: 0px;
-      // border-top-right-radius: 0px;
       border: 1px solid darken($white, 5%);
+    }
+  }
 
+  &__actions {
+    background-color: darken($white, 3%);
+    display: flex;
+    font-size: 0.8em;
+    text-transform: uppercase;
 
+    &-item {
+      padding: $default_padding;
+      flex: 1;
+      display: flex;
+      align-items: center;
+      max-width: 50%;
+      justify-content: center;
+      cursor: pointer;
+      font-weight: 700;
+
+      &:hover {
+        font-weight: 700 !important;
+        text-decoration: none;
+      }
+    }
+
+    &-icon {
+      font-size: 1.2em;
+      margin-right: 8px;
     }
   }
 }
