--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -19,6 +19,7 @@
 @import './components/jca-card-tags';
 @import './components/jca-card-pricing';
 @import './components/jca-card-feed';
+@import './components/jca-card-notifications';
 
 body * {
   font-family: $base_font;
