--- a/src/styles/components/_jca-card-timeline.scss
+++ b/src/styles/components/_jca-card-timeline.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   box-shadow: $default_shadow;
+  margin-bottom: 20px;
 
   &__header {
     height: 60px;
