--- a/src/styles/base/layout/_main.scss
+++ b/src/styles/base/layout/_main.scss
@@ -1,9 +1,25 @@
+// .jca-main {
+//   display: grid;
+//   grid-template-columns: 320px 1fr;
+//   grid-template-rows: 1fr;
+//   grid-column-gap: 0px;
+//   grid-row-gap: 0px;
+//   height: calc(100vh - 80px);
+//   max-height: calc(100vh - 80px);
+// }
+
 .jca-main {
-  display: grid;
-  grid-template-columns: 320px 1fr;
-  grid-template-rows: 1fr;
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
+  display: flex;
   height: calc(100vh - 80px);
   max-height: calc(100vh - 80px);
+  width: 100%;
+  min-width: 100vw;
+
+  &--columns {
+    flex-direction: column;
+  }
+
+  &--scrollable {
+    overflow-y: scroll;
+  }
 }
