--- a/src/styles/components/_jca-card.scss
+++ b/src/styles/components/_jca-card.scss
@@ -18,7 +18,7 @@
       display: flex;
       align-items: center;
     }
-  
+
     &-actions {
       flex: 1;
       height: 60px;
@@ -32,7 +32,7 @@
     padding: 30px;
 
     &--border {
-      border-top: 1px solid #F5F5FA;
+      border-top: $default_border;
     }
   }
 
