--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,6 +1,6 @@
 $black:             #262626;
 $white:             #fff;
-$grey:              #f8f9fA;
+$grey:              #f8f9fa;
 
 $base_font_size:      14px;
 $base_font:           'Montserrat', sans-serif;
@@ -9,5 +9,5 @@ $default_padding:     30px;
 $light_padding:       20px;
 $heavy_padding:       40px;
 $default_radius:      4px;
-$default_shadow:      0 0 25px rgba(0, 0, 0, 0.10), 0 15px 12px rgba(0, 0, 0, 0.04);
+$default_shadow:      0 0 25px rgba(0, 0, 0, 0.1), 0 15px 12px rgba(0, 0, 0, 0.04);
 $default_border:      1px solid $grey;
