--- a/src/styles/components/_jca-card.scss
+++ b/src/styles/components/_jca-card.scss
@@ -16,7 +16,7 @@
     padding: $default_padding;
     font-weight: 800;
     text-transform: uppercase;
-    white-space: pre;
+    white-space: pre-line;
 
     &-text {
       flex: 3;
