--- a/src/styles/base/layout/_topbar.scss
+++ b/src/styles/base/layout/_topbar.scss
@@ -2,10 +2,11 @@
   display: flex;
   width: 100%;
   background-color: $white;
+  background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(248,249,250,1) 100%); 
   box-shadow: $default_shadow;
   padding: 0 50px;
-  height: 80px;
-  max-height: 80px;
+  height: 70px;
+  max-height: 70px;
   z-index: 100;
 
   &--transparent {
