all code examples

--- a/src/styles/components/_jca-card-tags.scss
+++ b/src/styles/components/_jca-card-tags.scss
@@ -3,6 +3,7 @@
   background: $white;
   overflow: hidden;
   box-shadow: $default_shadow;
+  margin-bottom: 20px;
 
   &__header {
     height: 60px;
