--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -22,6 +22,7 @@
 @import './components/jca-card-feed';
 @import './components/jca-card-notifications';
 
+// MISC
 @import './components/jca-code-reference';
 
 // UTILITIES
