--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,10 +3,11 @@
 @import '../../node_modules/bootstrap/dist/css/bootstrap.min.css';
 @import '../../node_modules/animate.css/animate.min.css';
 @import './vendor/bootstrap-theme.css';
-@import './vendor/dropdown.min.css';
+// @import './vendor/dropdown.min.css';
+@import './vendor/prism.css';
 
 // BASE
-@import './base/fonts.css';
+@import './base/fonts';
 @import './base/variables';
 @import './base/layout';
 
@@ -20,6 +21,12 @@
 @import './components/jca-card-pricing';
 @import './components/jca-card-feed';
 @import './components/jca-card-notifications';
+
+// MISC
+@import './components/jca-code-reference';
+
+// UTILITIES
+@import './utilities/jca-keyword';
 
 body * {
   font-family: $base_font;
