--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -20,6 +20,7 @@
 @import './components/jca-card-pricing';
 @import './components/jca-card-feed';
 @import './components/jca-card-notifications';
+@import './components/jca-card-one-time-pin';
 
 // MISC
 @import './components/jca-code-reference';
