--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -21,6 +21,7 @@
 @import './components/jca-card-feed';
 @import './components/jca-card-notifications';
 @import './components/jca-card-one-time-pin';
+@import './components/jca-credit-card';
 
 // MISC
 @import './components/jca-code-reference';
