--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -29,6 +29,10 @@
 // UTILITIES
 @import './utilities/jca-keyword';
 
+// OVERRIDES
+@import './overrides/btn';
+@import './overrides/container';
+
 body * {
   font-family: $base_font;
 }
