--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,6 +1,27 @@
 $black:             #262626;
 $white:             #fff;
 $grey:              #f8f9fa;
+$blue:              #007bff;
+$indigo:            #6610f2;
+$purple:            #6f42c1;
+$pink:              #e83e8c;
+$red:               #dc3545;
+$orange:            #fd7e14;
+$yellow:            #ffc107;
+$green:             #28a745;
+$teal:              #20c997;
+$cyan:              #17a2b8;
+$gray:              #6c757d;
+$gray-dark:         #343a40;
+
+$primary:           #083358;
+$secondary:         #f67280;
+$success:           #0074e4;
+$info:              #74dbef;
+$warning:           #fc3c3c;
+$danger:            #ff4057;
+$light:             #f2f2f0;
+$dark:              #072247;
 
 $base_font_size:      14px;
 $base_font:           'Montserrat', sans-serif;
