--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -25,6 +25,7 @@
 
 // MISC
 @import './components/jca-code-reference';
+@import './components/jca-list';
 
 // UTILITIES
 @import './utilities/jca-keyword';
