--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -32,3 +32,5 @@ $heavy_padding:       40px;
 $default_radius:      4px;
 $default_shadow:      0 0 25px rgba(0, 0, 0, 0.1), 0 15px 12px rgba(0, 0, 0, 0.04);
 $default_border:      1px solid $grey;
+
+$topbar_height:       70px;
