setup nunjucks with dynamic menu

--- a/src/templates/dashboard.njk
+++ b/src/templates/dashboard.njk
@@ -64,169 +64,11 @@
     
     <div class="jca-main">
       <div class="jca-main__content">
-        
-        
-  
-  <div class="jca-sidebar">
-    <ul class="jca-nav-card">
-      <li class="jca-nav-card__item ">
-        <div class="jca-nav-card__item-icon">
-          <ion-icon name="home-outline"></ion-icon>
-        </div>
-        <a href="../pages/home.html" class="jca-nav-card__item-link">
-          Home
-        </a>
-      </li>
-
-      <li class="jca-nav-card__item ">
-        <div class="jca-nav-card__item-icon">
-          <ion-icon name="hourglass-outline"></ion-icon>
-        </div>
-        <a href="../pages/vertical-timeline.html" class="jca-nav-card__item-link">
-          Timeline
-        </a>
-      </li>
-
-      <li class="jca-nav-card__item jca-nav-card__item ">
-        <div class="jca-nav-card__item-icon">
-          <ion-icon name="layers-outline"></ion-icon>
-        </div>
-        <a href="../pages/cards.html" class="jca-nav-card__item-link">
-          Cards
-        </a>
-      </li>
-
-      <li class="jca-nav-card__item ">
-        <div class="jca-nav-card__item-icon">
-          <ion-icon name="grid-outline"></ion-icon>
-        </div>
-        <a href="../pages/card-group.html" class="jca-nav-card__item-link">
-          Card Group
-        </a>
-      </li>
-
-      <li class="jca-nav-card__item ">
-        <div class="jca-nav-card__item-icon">
-          <ion-icon name="pricetags-outline"></ion-icon>
-        </div>
-        <a href="../pages/tags.html" class="jca-nav-card__item-link">
-          Tags
-        </a>
-      </li>
-
-      <li class="jca-nav-card__item ">
-        <div class="jca-nav-card__item-icon">
-          <ion-icon name="card-outline"></ion-icon>
-        </div>
-        <a href="../pages/pricing.html" class="jca-nav-card__item-link">
-          Pricing
-        </a>
-      </li>
-
-      <li class="jca-nav-card__item ">
-        <div class="jca-nav-card__item-icon">
-          <ion-icon name="reader-outline"></ion-icon>
-        </div>
-        <a href="../pages/feed.html" class="jca-nav-card__item-link">
-          Feed
-        </a>
-      </li>
-
-      <li class="jca-nav-card__item ">
-        <div class="jca-nav-card__item-icon">
-          <ion-icon name="flash-outline"></ion-icon>
-        </div>
-        <a href="../pages/notifications.html" class="jca-nav-card__item-link">
-          Notifications
-        </a>
-      </li>
-
-      <li class="jca-nav-card__item  jca-nav-card__item--active ">
-        <div class="jca-nav-card__item-icon">
-          <ion-icon name="calculator-outline"></ion-icon>
-        </div>
-        <a href="../pages/one-time-pin.html" class="jca-nav-card__item-link">
-          One Time Pin
-        </a>
-      </li>
-
-      <li class="jca-nav-card__item ">
-        <div class="jca-nav-card__item-icon">
-          <ion-icon name="card-outline"></ion-icon>
-        </div>
-        <a href="../pages/credit-card.html" class="jca-nav-card__item-link">
-          Credit Card
-        </a>
-      </li>
-    </ul>
-  </div>
-
-
+        {% import 'macros/sidebar.njk' as nav %}
+        {% block jca_sidebar %} {% endblock %}
         
         <div class="jca-content">
-          
-  <div class="row">
-    <div class="col-md-12">
-      <div class="jca-page-header">
-        <div class="jca-page-header__title">
-          <ion-icon class="jca-page-header__icon" name="calculator-outline"></ion-icon>
-          One Time Pin
-        </div>
-        <div class="jca-page-header__subtitle">
-          One time pin inputs from online transactions
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-12">
-      <div class="jca-code-reference">
-        <div class="jca-code-reference__example">
-          <div class="jca-code-reference__description">
-            A simple way to present one time pin
-          </div>
-          <div class="jca-code-reference__visual">
-            <div class="jca-card-otp">
-              <div class="jca-card-otp__icon">
-                <ion-icon name="finger-print-outline"></ion-icon>
-              </div>
-              <div class="jca-card-otp__text">
-                Please enter the one time pin sent to *******789
-              </div>
-              <div class="jca-card-otp__input">
-                <input type="text" value="12345" />
-              </div>
-              <div class="jca-card-otp__action">
-                <div class="btn btn-success">Submit</div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="jca-code-reference__code">
-          <pre>
-            <code class="language-html">
-&lt;div class="jca-card-otp"&gt;
-&lt;div class="jca-card-otp__icon"&gt;
-&lt;ion-icon name="finger-print-outline"&gt;&lt;/ion-icon&gt;
-&lt;/div&gt;
-&lt;div class="jca-card-otp__text"&gt;
-Please enter the one time pin sent to *******789
-&lt;/div&gt;
-&lt;div class="jca-card-otp__input"&gt;
-&lt;input type="text" /&gt;
-&lt;/div&gt;
-&lt;div class="jca-card-otp__action"&gt;
-&lt;div class="btn btn-success"&gt;Submit&lt;/div&gt;
-&lt;/div&gt;
-&lt;/div&gt;
-            </code>
-          </pre>
-        </div>
-      </div>
-    </div>
-  </div>
-
+          {% block jca_content %} {% endblock %}
         </div>
       </div>
 
