clean up gulpfile

--- a/src/templates/dashboard.njk
+++ b/src/templates/dashboard.njk
@@ -60,8 +60,6 @@
       </ul>
     </div>
 
-    
-    
     <div class="jca-main">
       <div class="jca-main__content">
         {% import 'macros/sidebar.njk' as nav %}
@@ -72,80 +70,7 @@
         </div>
       </div>
 
-      <div class="jca-footer jca-footer--gradient-1">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-4 d-flex align-items-center">
-              <div class="jca-logo jca-logo--light">
-                <a href="../index.html">
-                  <img src="../img/logo-light.svg" />
-                  JCA UI KIT
-                  <span class="jca-logo__version">v0.1.0</span>
-                </a>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <ul class="jca-list">
-                <li class="jca-list__header">
-                  Social
-                </li>
-                <li class="jca-list__item">
-                  <a href="#">Link 1</a>
-                </li>
-                <li class="jca-list__item">
-                  <a href="#">Link 2</a>
-                </li>
-                <li class="jca-list__item">
-                  <a href="#">Link 3</a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-md-4">
-              <ul class="jca-list">
-                <li class="jca-list__header">
-                  Contact
-                </li>
-                <li class="jca-list__item">
-                  <a href="#">Link 1</a>
-                </li>
-                <li class="jca-list__item">
-                  <a href="#">Link 2</a>
-                </li>
-                <li class="jca-list__item">
-                  <a href="#">Link 3</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="row mt-5">
-            <div class="col-md-12 text-center">
-              <p>
-                The information contained in this website is for general information purposes only. 
-                The information is provided by <b>TT | Sftwr</b> and while we endeavour to keep the 
-                information up to date and correct, we make no representations or warranties of any 
-                kind, express or implied, about the completeness, accuracy, reliability, suitability 
-                or availability with respect to the website or the information, products, services, 
-                or related graphics contained on the website for any purpose. Any reliance you place 
-                on such information is therefore strictly at your own risk.
-              </p>
-
-              <p>
-                In no event will we be liable for any loss or damage including without limitation, 
-                indirect or consequential loss or damage, or any loss or damage whatsoever arising 
-                from loss of data or profits arising out of, or in connection with, the use of this 
-                website.
-              </p>
-            </div>
-          </div>
-
-          <div class="row mt-5 d-flex justify-content-center">
-            <a href="https://www.thabotitus.co.za" target="_blank">
-              <img src="../img/TTS-Logo-light.png" width="250px" />
-            </a>
-          </div>
-        </div>
-      </div>
+      {% include "partials/footer.njk" %}
     </div>
 
   </div>
