--- a/src/templates/partials/footer.njk
+++ b/src/templates/partials/footer.njk
@@ -6,7 +6,7 @@
           <a href="../index.html">
             <img src="../img/logo-light.svg"/>
             JCA UI KIT
-            <span class="jca-logo__version">v0.1.0</span>
+            <span class="jca-logo__version" data-version></span>
           </a>
         </div>
       </div>
