clean up deps, create one deps file, add scrollbar

--- a/src/templates/layout.njk
+++ b/src/templates/layout.njk
@@ -20,8 +20,7 @@
     <div class="jca-layout d-none" data-body="content">
       {% block content %} {% endblock %}
     </div>
-
-    <script type="text/javascript" src="./js/jquery.min.js"></script>
+    <script type="text/javascript" src="./js/jca_dependencies.min.js"></script>
     <script type="text/javascript" src="./js/jca-ui-kit.min.js"></script>
   </body>
 </html>
