--- a/src/templates/dashboard.njk
+++ b/src/templates/dashboard.njk
@@ -60,7 +60,7 @@
       </ul>
     </div>
 
-    <div class="jca-main">
+    <div class="jca-main" data-scrollbar>
       <div class="jca-main__content">
         {% import 'macros/sidebar.njk' as nav %}
         {% block jca_sidebar %} {% endblock %}
@@ -76,6 +76,6 @@
   </div>
 </body>
 
-<script type="text/javascript" src="../js/jquery.min.js"></script>
+<script type="text/javascript" src="../js/jca_dependencies.min.js"></script>
 <script type="text/javascript" src="../js/jca-ui-kit.min.js"></script>
 </html>
