--- a/src/styles/components/_jca-nav-card.scss
+++ b/src/styles/components/_jca-nav-card.scss
@@ -41,7 +41,7 @@
 
     &--active > &-link,
     &--active > &-icon {
-      background:  $black;
+      background: $primary;
       color: $white;
       font-weight: bold;
 
@@ -56,6 +56,7 @@
   color:  $black;
   display: flex;
   text-transform: uppercase;
+  background: $grey;
 
   .jca-nav-card__item-link {
     color: $black !important;
