--- a/src/templates/macros/sidebar.njk
+++ b/src/templates/macros/sidebar.njk
@@ -90,6 +90,24 @@
           Credit Card
         </a>
       </li>
+
+      <li class="jca-nav-card__item {%if activePage == 'pagination' %} jca-nav-card__item--active {% endif %}">
+        <div class="jca-nav-card__item-icon">
+          <ion-icon name="git-commit-outline"></ion-icon>
+        </div>
+        <a href="../pages/pagination.html" class="jca-nav-card__item-link">
+          Pagination
+        </a>
+      </li>
+
+      <li class="jca-nav-card__item {%if activePage == 'datatable' %} jca-nav-card__item--active {% endif %}">
+        <div class="jca-nav-card__item-icon">
+          <ion-icon name="hardware-chip-outline"></ion-icon>
+        </div>
+        <a href="../pages/datatable.html" class="jca-nav-card__item-link">
+          Datatable
+        </a>
+      </li>
     </ul>
   </div>
 {% endmacro %}
