--- a/src/pages/pagination.njk
+++ b/src/pages/pagination.njk
@@ -26,12 +26,12 @@
           </div>
           <div class="jca-code-reference__visual">
             <ul class="jca-pagination">
-              <li class="jca-pagination__item ca-pagination--disabled"><ion-icon name="arrow-back-outline"></ion-icon></li>
+              <li class="jca-pagination__item"><ion-icon name="arrow-back-outline"></ion-icon></li>
               <li class="jca-pagination__item jca-pagination--current">1</li>
               <li class="jca-pagination__item">2</li>
               <li class="jca-pagination__item">3</li>
               <li class="jca-pagination__item">4</li>
-              <li class="jca-pagination__item">5</li>
+              <li class="jca-pagination__item jca-pagination--disabled">5</li>
               <li class="jca-pagination__item"><ion-icon name="arrow-forward-outline"></ion-icon></li>
             </ul>
           </div>
@@ -39,7 +39,15 @@
         <div class="jca-code-reference__code">
           <pre>
             <code class="language-html">
-
+&lt;ul class="jca-pagination"&gt;
+  &lt;li class="jca-pagination__item"&gt;&lt;ion-icon name="arrow-back-outline"&gt;&lt;/ion-icon&gt;&lt;/li&gt;
+  &lt;li class="jca-pagination__item jca-pagination--current"&gt;1&lt;/li&gt;
+  &lt;li class="jca-pagination__item"&gt;2&lt;/li&gt;
+  &lt;li class="jca-pagination__item"&gt;3&lt;/li&gt;
+  &lt;li class="jca-pagination__item"&gt;4&lt;/li&gt;
+  &lt;li class="jca-pagination__item jca-pagination--disabled"&gt;5&lt;/li&gt;
+  &lt;li class="jca-pagination__item"&gt;&lt;ion-icon name="arrow-forward-outline"&gt;&lt;/ion-icon&gt;&lt;/li&gt;
+&lt;/ul&gt;
             </code>
           </pre>
         </div>
