--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -30,7 +30,9 @@ $default_padding:     30px;
 $light_padding:       20px;
 $heavy_padding:       40px;
 $default_radius:      4px;
-$default_shadow:      0 0 25px rgba(0, 0, 0, 0.1), 0 15px 12px rgba(0, 0, 0, 0.04);
+$dark_shadow:         0 0 25px rgba(0, 0, 0, 0.1), 0 15px 12px rgba(0, 0, 0, 0.04);
+$default_shadow:      3px 3px 10px 4px rgba(218, 224, 228, 0.4);
+// $default_shadow:      0 5px 15px rgba(0,0,0,.1),0 15px 35px rgba(0,0,0,.1),0 50px 100px rgba(50,50,93,.1);
 $default_border:      1px solid $grey;
 
 $topbar_height:       70px;
