--- a/src/styles/base/layout/_section.scss
+++ b/src/styles/base/layout/_section.scss
@@ -1,9 +1,13 @@
 .jca-section {
-  width: 100vw;
+  width: 100%;
   overflow: hidden;
 
   &--full-page {
     min-height: 100vh;
+  }
+
+  &--first {
+    min-height: calc(100vh - 70px) !important;
   }
 
   &--center {
