--- a/src/templates/macros/sidebar.njk
+++ b/src/templates/macros/sidebar.njk
@@ -108,6 +108,15 @@
           Datatable
         </a>
       </li>
+
+      <li class="jca-nav-card__item {%if activePage == 'info-card' %} jca-nav-card__item--active {% endif %}">
+        <div class="jca-nav-card__item-icon">
+          <ion-icon name="flower-outline"></ion-icon>
+        </div>
+        <a href="../pages/info-card.html" class="jca-nav-card__item-link">
+          Info Card
+        </a>
+      </li>
     </ul>
   </div>
 {% endmacro %}
