--- a/src/index.njk
+++ b/src/index.njk
@@ -35,7 +35,7 @@
             <div class="jca-card-feed">
               <div class="jca-card-feed__author">
                 <div class="jca-card-feed__author-name">
-                  Anil Kuthrapali
+                  Desmond Dube
                 </div>
 
                 <div class="jca-card-feed__author-meta">
