--- a/src/styles/base/layout/_topbar.scss
+++ b/src/styles/base/layout/_topbar.scss
@@ -3,7 +3,7 @@
   width: 100%;
   background-color: $white;
   background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(248,249,250,1) 100%); 
-  box-shadow: $default_shadow;
+  box-shadow: $dark_shadow;
   padding: 0 50px;
   height: $topbar_height;
   max-height: $topbar_height;
