--- a/src/styles/components/_jca-pagination.scss
+++ b/src/styles/components/_jca-pagination.scss
@@ -7,10 +7,10 @@
   padding: 0;
   list-style: none;
   margin-bottom: 20px;
-  display: flex;
+  display: inline-flex;
 
   &__item {
-    flex: 1;
+    // flex: 1;
     padding: 0 15px;
     height: 40px;
     display: flex;
@@ -30,7 +30,7 @@
   }
 
   &--current {
-    background: $secondary;
+    background: $primary;
     color: $white;
     font-weight: 700;
 
@@ -39,7 +39,7 @@
     }
 
     &:hover {
-      background: $secondary;
+      background: $primary;
 
       a {
         text-decoration: none;
@@ -54,6 +54,14 @@
       font-weight: 400;
     }
   }
-  &--previous {}
-  &--last {}
+
+  &--disabled {
+    cursor: not-allowed;
+    background-color: $grey;
+
+    &:hover {
+      background-color: $grey;
+      font-weight: 400;
+    }
+  }
 }
